--- a/templates/vstup/about.html
+++ b/templates/vstup/about.html
@@ -10,7 +10,7 @@
   <div class="carousel-inner">
 
     <div class="carousel-item active">
-      <img src="{% static 'images/w1.png' %}" style="height: 200px;" class="d-block  w-100 " alt="image">
+      <img src="{% static 'images/ww1.jpg' %}" style="height: 200px;" class="d-block  w-100 " alt="image">
       <div class="carousel-caption d-none d-md-block">
         <h2 class="text-black">Загальні завдання</h2>
         <h3 class="text-white">{{rab1}}</h3>
@@ -18,7 +18,7 @@
     </div>
 
     <div class="carousel-item">
-      <img src="{% static 'images/w2.png' %}" style="height: 200px;" class="d-block  w-100 " alt="image">
+      <img src="{% static 'images/ww5.jpg' %}" style="ght: 300px;" class="d-block  w-100 " alt="image">
       <div class="carousel-caption d-none d-md-block">
         <h2 class="text-black">Підготовка кадрів</h2>
         <h3 class="text-white">{{rab2}}</h3>
@@ -26,7 +26,7 @@
     </div>
 
     <div class="carousel-item">
-      <img src="{% static 'images/w3.png' %}" style="height: 200px;" class="d-block  w-100 " alt="image">
+      <img src="{% static 'images/ww7.jpg' %}" style="height: 200px;" class="d-block  w-100 " alt="image">
       <div class="carousel-caption d-none d-md-block">
         <h2 class="text-black">Облік</h2>
         <h3 class="text-white">{{rab3}}</h3>
@@ -34,9 +34,9 @@
     </div>
 
     <div class="carousel-item">
-      <img src="{% static 'images/w4.png' %}" style="height: 200px;" class="d-block  w-100 " alt="image">
+      <img src="{% static 'images/ww2.jpg' %}" style="height: 200px;" class="d-block  w-100 " alt="image">
       <div class="carousel-caption d-none d-md-block">
-        <h2 class="text-black">Попрати - пофарбувати</h2>
+        <h2 class="text-black">Інше</h2>
         <h3 class="text-black">{{rab4}}</h3>
       </div>
     </div>
@@ -68,12 +68,7 @@
           <h3>{{ name }}</h3>
       </div>
 
-    <div class="row my-2 text-white text-start">
-        <div class="col mx-2 my-2 bg-primary">{{rab1}}</div>
-        <div class="col mx-2 my-2 bg-primary">{{rab2}}</div>
-        <div class="col mx-2 my-2 bg-primary">{{rab3}}</div>
-        <div class="col mx-2 my-2 bg-primary">{{rab4}}</div>
-    </div>
+
   </div>
 
 <div class="row my-2 text-center">
@@ -99,10 +94,7 @@
             <div id="collapseOne" class="accordion-collapse collapse"
                  aria-labelledby="headingOne" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-                <strong>Працюємо</strong> як бджілки, бо Сучасний світу нерозривно пов’язаний з розвитком інформаційних технологій.
-У сучасних умовах війни, стрімкого зростання впливу науки та технологій, необхідності забезпечення економічної, технологічної, інформаційної безпеки та розвитку держави завдання підготовки наукових кадрів є надзвичайно актуальним.
-Інформаційні системи управління освітою (Education Management Information System (EMIS) дають змогу посадовцям вчасно отримувати достовірну інформаціюта на її основі здійснювати ухвалення рішень.
-Зважаючи на це, вимоги до формування інформаційних систем у сфері освіти є дуже високими, адже неякісна освітня інформація може мати далекосяжні негативні наслідки, серед яких ухвалення невірних управлінських рішень
+                <strong>Підтримка корпоративної культури</strong>  КПІ ім. Ігоря Сікорського в питаннях надання якісної сучасної освіти, академічної доброчесності, конкурентності, креативності, ініціативності, прав та свобод людини, базових цінностей та ін.
             </div>
             </div>
           </div>
@@ -118,10 +110,7 @@
             <div id="collapseTwo" class="accordion-collapse collapse"
                  aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-                <strong>Підготовка наукових та науково-педагогічних кадрів</strong> Вступна компанія до аспірантури ЗВО – це процес, в якому беруть участь вступники, співробітники відділу аспірантури та предметні екзаменаційні комісії по прийому вступних випробувань до аспірантури.
-До вступних випробувань для здобуття ступеня доктора філософії допускаються особи, які подали всі необхідні для вступу документи відповідно до встановлених строків [15].
-Вступні випробування для здобуття ступеня доктора філософії в КПІ  ім. Ігоря Сікорського проводяться відповідно до Положення про вступні випробування до КПІ ім. Ігоря Сікорського на конкурсный основі.
-Конкурсний відбір проводиться на основі конкурсного бала, який розраховується відповідно до Порядку прийому на навчання для здобуття вищої освіти на поточний рік та Правил прийому до аспірантури.
+                <strong>Підготовка наукових та науково-педагогічних кадрів</strong> Організації підготовки аспірантів (докторантів), які вступили до аспірантури (докторантури) у відповідності до Постанови Кабінету Міністрів України «Про затвердження Порядку підготовки здобувачів вищої освіти ступеня доктора філософії та доктора наук у закладах вищої освіти (наукових установах)» від 23 березня 2016 року № 261.
 
             </div>
             </div>
@@ -139,8 +128,7 @@
             <div id="collapseThree" class="accordion-collapse collapse"
                  aria-labelledby="headingThree" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-                <strong>Ведення обліків аспірантів</strong> Використання інформаційних технологій минулого тисячоліття, відсутність сучасної багатокористувацької інформаційної системи, основаної на базі даних, зумовлює дублювання інформації, помилки при обробці даних та формуванні документів, нераціональне використання робочого часу, високу трудомісткість операцій, що виконуються співробітниками відділу аспірантури.
-З метою підвищення ефективності діяльності відділу аспірантури за рахунок автоматизації, зменшення часу виконання робіт співробітниками відділу, уникнення помилок у процесах прийому, обробки даних та формування документів щодо вступу до аспірантури розроблений веб-сервіс “Вступ”, який у подальшому як модуль увійде до складу інформаційної системи “Підготовка здобувачів вищої освіти ступеня доктора філософії”.
+                <strong>Формування</strong>  планового замовлення на підготовку в аспірантурі та докторантурі за рахунок державного фінансування? Внесення відповідної інформації, що стосується здобувачів ступеня доктора філософії та доктора наук, до Єдиної державної електронної бази з питань освіти (ЄДЕБО).
             </div>
           </div>
           <!-- Акордеон елемент 4-->
@@ -150,14 +138,16 @@
                     data-bs-toggle="collapse"
                     data-bs-target="#collapseFour"
                     aria-expanded="false" aria-controls="collapseThree">
-                Роботи на замовлення
+                Інше
             </button>
             </h2>
             <div id="collapseFour" class="accordion-collapse collapse"
                  aria-labelledby="headingFour" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-                <strong>Інші роботи на замовлення</strong> Виходячи з обраного для реалізації фреймворка Django для розробки Web-сервісу “Вступ” буде використано мову програмування Python.
-Ця мова відноситься до найбільш популярних, використовується в ультрасучасних технологіях, технологічному стеку багатьох компаній, включаючи Google, має дуже розвинену бібліотеку PyPI та забезпечує розробку з використанням фреймворка Django.
+                <strong>Інші роботи</strong> <p>Організація та проведення заходів з прийому до аспірантури та докторантури за всіма формами;</p
+                <p>Розробка методичних рекомендацій щодо організації навчального процесу. Аналіз результатів зворотнього зв’язку від студентів стосовно якості викладання.;</p
+                    <p>Організація, контроль та аналіз звітування здобувачів освіти щодо виконання індивідуальних планів наукової роботи.</p
+                        
 
             </div>
           </div>
