--- a/templates/vstup/index.html
+++ b/templates/vstup/index.html
@@ -4,32 +4,80 @@
 {% endblock %}
 
 {% block header %}
-<h5>{{ text_head }}</h5>
+<h5 class="my-2">{{ text_head }}</h5>
 {% endblock %}
 
 {% block content %}
-<h4>*** Вступ до аспірантури ***</h4>
 
 <div class="container-fluid my-2">
-  <div class="row bg-success text-white mx-2">
-    <div class="col text-center">
-      <div>{{ text_body }}</div>
+    <div class="row  mx-2">
+        <div class="col text-start">
+            <div class="my-3">{{ text_body }}</div>
+            <div class="my-2">
+                Вступ до аспірантури (ад’юнктури) та докторантури здійснюється на конкурсній основі відповідно до цього
+                Порядку, Умов прийому на навчання до закладів вищої освіти, затверджених МОН, та правил прийому до
+                відповідного закладу вищої освіти (наукової установи).
+            </div>
+            <div class="my-2">
+                Правила прийому до закладу вищої освіти, зокрема щодо прийому до аспірантури (ад’юнктури) та
+                докторантури, затверджує вчена рада закладу вищої освіти на основі Умов прийому на навчання до закладів
+                вищої освіти та в установлені строки оприлюднює їх на офіційному веб-сайті закладу вищої освіти.
+            </div>
+            <div class="my-2">
+                Відповідно до Умов прийому на навчання до закладів вищої освіти вчена рада наукової установи, яка
+                здійснює підготовку докторів філософії (згідно з отриманою ліцензією на провадження відповідної
+                освітньої діяльності) та/або докторів наук, затверджує Правила прийому до наукової установи, якими
+                регулюється вступ на відповідні рівні вищої освіти, та в установлені строки оприлюднює їх на офіційному
+                веб-сайті наукової установи.
+            </div>
+            <div class="my-2">
+                Правила прийому до закладу вищої освіти (наукової установи) діють протягом відповідного календарного
+                року і визначають, зокрема:
+                <ul>
+                    <li>
+                        порядок, перелік і строки подання документів для вступу до аспірантури (ад’юнктури) та
+                        докторантури закладу вищої освіти (наукової установи);
+                    </li>
+                    <li>
+                        зміст, форму і строки вступних випробувань для конкурсного відбору вступників до аспірантури
+                        (ад’юнктури) та докторантури за кожною спеціальністю або відповідною галуззю знань.
+                    </li>
+                </ul>
+                <div class="my-2">
+                    До аспірантури (ад’юнктури) на конкурсній основі приймаються особи, які здобули вищу освіту ступеня
+                    магістра. До вступних випробувань допускаються особи, які вчасно подали всі необхідні для вступу
+                    документи згідно з правилами прийому до закладу вищої освіти (наукової установи). Приймальна комісія
+                    може відмовити особі в допуску до проходження вступних випробувань до аспірантури (ад’юнктури)
+                    виключно у зв’язку з неподанням в установлений строк документів, визначених правилами прийому.
+                </div>
 
-      <p>
-        До аспірантури на конкурсній основі приймаються особи, які здобули вищу освіту ступеня магістра (спеціаліста). До вступних випробувань допускаються особи, які вчасно подали всі необхідні для вступу документи згідно з правилами прийому до <em>Університету</em>. Приймальна комісія може відмовити особі в допуску до проходження вступних випробувань до аспірантури виключно у зв’язку з неподанням в установлений строк документів, визначених правилами прийому.
-      </p>
+                <div class="my-2">
+                    Перелік документів, необхідних для вступу до аспірантури (ад’юнктури), повинен включати:
+                    <ul>
+                        <li>
+                            заяву вступника;
+                        </li>
+                        <li>
+                            копію диплома магістра (спеціаліста) із зазначенням здобутої спеціальності (кваліфікації);
+                        </li>
+                        <li>
+                            у разі потреби документ про визнання особи органами медико-соціальної експертизи особою з
+                            інвалідністю.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="my-2">
+
+            </div>
+            <div class="my-2">
+
+            </div>
+            <div class="my-2">
+
+            </div>
+        </div>
     </div>
-  </div>
-
-  <div class="row text-center text-dark lh-2">
-    <h4>Відомості про вступ:</h4>
-  </div>
-
-  <div class="row my-2 text-white">
-    <div class="col mx-2 bg-primary">Подано e-заяв: -
-      {{ num_entrants }}</div>
-      <div class="col mx-2 bg-primary">Військовозобов'язаних: -
-        {{ num_military }}</div>
       </div>
-    </div>
     {% endblock %}
+
