--- a/templates/vstup/base.html
+++ b/templates/vstup/base.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  {% load static %}
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="/static/css/bootstrap.min.css" />
-  <script defer src="/static/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    {% load static %}
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css"/>
+    <script defer src="/static/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css'%}">
+
 
     <!-- For formatting dates -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js"></script>
@@ -15,70 +17,70 @@
 </head>
 
 <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
-        <script src="https://unpkg.com/htmx.org@1.9.2" integrity="sha384-L6OqL9pRWyyFU3+/bjdSri+iIphTN/bvYyM37tICVyOJkWZLpP2vGn6VUEXgzg6h" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-  <div class="container-fluid p-1 bg-primary text-white text-center">
-    <div class="row">
-      <div class="col-2 text-start">
-        <img src="{% static 'images/p100.png' %}" width="100" />
-      </div>
-      <div class="col-10">
-        <h1>Аспірантура КПІ імені Ігоря СІКОРСЬКОГО</h1>
-      </div>
-    </div>
-  </div>
+<script src="https://unpkg.com/htmx.org@1.9.2"
+        integrity="sha384-L6OqL9pRWyyFU3+/bjdSri+iIphTN/bvYyM37tICVyOJkWZLpP2vGn6VUEXgzg6h"
+        crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
 
-  <div class="container-fluid">
-    <div class="row bg-warning text-center">
-      <h6>
-        <a href="{% url 'index' %}">На Головну</a>
-        <a href="{% url 'about' %}">Про нас</a>
-        <a href="{% url 'contact' %}">Контакты</a>
-      </h6>
+<div class="container-fluid bg-primary text-white text-center">
+    <div class="row" >
+        <div class="col-2 text-start pt-2 pb-2">
+            <img src="{% static 'images/p100.png' %}" width="40"/>
+        </div>
+        <div class="col-10">
+            <h1>Аспірантура КПІ ім. Ігоря СІКОРСЬКОГО</h1>
+        </div>
     </div>
-  </div>
+</div>
 
-  <div class="container-fluid">
+<div class="container-fluid bg-warning ">
+    <div class="text-center justify-content-end p-1">
+        <a href="{% url 'index' %}" class="btn btn-outline-primary">Головна</a>
+        <a href="{% url 'about' %}" class="btn btn-outline-primary">Про нас</a>
+        <a href="{% url 'contact' %}" class="btn btn-outline-primary">Контакти</a>
+    </div>
+</div>
+
+
+<div class="container-fluid">
     <div class="row text-center text-primary fs-1 fw-bold">
-      <div>
-        {% block header %} {% endblock %}
-      </div>
+        <div>
+            {% block header %} {% endblock %}
+        </div>
     </div>
     <div class="row text-body">
-      <div class="col-2">
-        {% block sidebar %}
-        <nav class="nav flex-column">
-          <a class="nav-link" href="{% url 'primary_info_create' %}">Реєстраційна форма</a>
+        <div class="col-2">
+            {% block sidebar %}
+            <nav class="nav flex-column">
+                <a class="btn btn-outline-primary mb-1" href="{% url 'primary_info_create' %}">Реєстраційна форма</a>
 
-          <a class="nav-link" href="{% url 'departments' %}">Кафедри</a>
-          <a class="nav-link" href="{% url 'specialties' %}">Спеціальності</a>
+                <a class="btn btn-outline-primary mb-1" href="{% url 'departments' %}">Кафедри</a>
+                <a class="btn btn-outline-primary mb-3" href="{% url 'specialties' %}">Спеціальності</a>
 
-          {% if user.is_authenticated %}
-          <a class="nav-link" href="{% url 'equeue_list' %}">Електронна черга</a>
-          <a class="nav-link" href="{% url 'primary_info_list' %}">Вступники</a>
-          <a class="nav-link" href="{% url 'entrant_verified_list' %}">Верифіковані вступники</a>
-          <a class="nav-link" href="{% url 'entrant_addtest_list' %}">Додаткові іспити</a>
-          <a class="nav-link" href="{% url 'entrant_grades_list' %}">Вступні іспити</a>
-          ----------------------------------
-          <a class="nav-link" href="{% url 'specialties_edit' %}">Cпеціальності</a>
-          <a class="nav-link" href="{% url 'departments_edit' %}">Кафедри</a>
-          <a class="nav-link" href="{% url 'universities_edit' %}">Заклади в/освіти</a>
-          ----------------------------------
-          <div>Користувач: {{ user.get_username }}</div>
-          <a class="nav-link" href="{% url 'logout'%}?next={{request.path}}">Вихід</a>
-          {% else %}
-          <a class="nav-link" href="{% url 'login'%}?next={{request.path}}">Вхід</a>
-          {% endif %}
-        </nav>
-        {% endblock %}
-      </div>
-      <div class="col-10">
-        <div class="row text-start">
+                {% if user.is_authenticated %}
+                <a class="btn btn-outline-secondary mb-1" href="{% url 'equeue_list' %}">Електронна черга</a>
+                <a class="btn btn-outline-secondary mb-1" href="{% url 'primary_info_list' %}">Вступники</a>
+                <a class="btn btn-outline-secondary mb-1" href="{% url 'entrant_verified_list' %}">Верифіковані вступники</a>
+                <a class="btn btn-outline-secondary mb-1" href="{% url 'entrant_addtest_list' %}">Додаткові іспити</a>
+                <a class="btn btn-outline-secondary mb-3" href="{% url 'entrant_grades_list' %}">Вступні іспити</a>
+                <a class="btn btn-outline-info mb-1" href="{% url 'specialties_edit' %}">Cпеціальності</a>
+                <a class="btn btn-outline-info mb-1" href="{% url 'departments_edit' %}">Кафедри</a>
+                <a class="btn btn-outline-info mb-1" href="{% url 'universities_edit' %}">Заклади в/освіти</a>
 
-          {% block content %} {% endblock %}
+                <a class="btn btn-primary mb-1" href="{% url 'logout'%}?next={{request.path}}">{{ user.get_username }} - вихід</a>
+                {% else %}
+                <a class="btn btn-primary mb-1" href="{% url 'login'%}?next={{request.path}}">Вхід</a>
+                {% endif %}
+            </nav>
+            {% endblock %}
+        </div>
+        <div class="col-10">
+            <div class="row text-start">
 
-          <!-- пагінатор -->
-          <div class="pagination">
+                {% block content %} {% endblock %}
+
+                <!-- пагінатор -->
+                <div class="pagination">
             <span class="step-links">
               {% if page_obj.paginator.num_pages > 1 %} {% if page_obj.has_previous %}
               <a href="?page=1">&laquo; Перша</a>
@@ -94,19 +96,19 @@
               <a href="?page={{ page_obj.paginator.num_pages }}">Крайня &raquo;</a>
               {% endif %} {% endif %}
             </span>
-          </div>
-          <!-- пагінатор -->
+                </div>
+                <!-- пагінатор -->
+            </div>
         </div>
-      </div>
     </div>
-  </div>
+</div>
 
-  <div class="container-fluid">
+<div class="container-fluid">
     <div class="row bg-primary text-center text-white lh-1">
-      {% block footer %}
-      <p>Контакти відідлу аспірантури: aspirantura@kpi.ua +38-044-204-93-49</p>
-      {% endblock %}
+        {% block footer %}
+        <p>Контакти відідлу аспірантури: aspirantura@kpi.ua +38-044-204-93-49</p>
+        {% endblock %}
     </div>
-  </div>
+</div>
 </body>
 </html>
